--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8087
+server.port = 8089
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/kkw?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -18,5 +18,7 @@ redis-port=6379
 from-email=kkwagh03@gmail.com
 from-password=kkwaghkkwagh2009
 
-confirm-api-host=localhost:8087
+confirm-api-host=localhost:8089
+cors.all.origin=true
 confirm-endpoint=/user/confirm/
+ui-endpoint=http://localhost:4600/confirm?confirmed=
